On Atom, an id element should be canonical.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@ layout: default
       <div class="header">
         <div class="date">{{ post.date | date: "%b %-d" }}</div>
         <h2>{{ post.title }}</h2>
-        <a class="permalink" href="{{ post.url }}">Permalink</a>
+        <a class="permalink" href="/2011{{ post.url }}">Permalink</a>
       </div>
       <div class="content">{{ post.content }}</div>
     </section>
