--- a/src/_posts/2011-01-09-venture-finance.html
+++ b/src/_posts/2011-01-09-venture-finance.html
@@ -4,7 +4,7 @@ layout: post
 ---
 <p>
   I read Isozaki Tetsuya's
-  &quot;Venture Finance - The Essential Guide for Entreprenuers&quot;.
+  &quot;<a href="http://www.amazon.co.jp/gp/product/4534047576?ie=UTF8&tag=8pinfo-22&linkCode=as2&camp=247&creative=7399&creativeASIN=4534047576">Venture Finance - The Essential Guide for Entreprenuers</a><img src="http://www.assoc-amazon.jp/e/ir?t=8pinfo-22&l=as2&o=9&a=4534047576" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />&quot;.
   The author's writing style is too casual for me.
   But the content is interesting and practical.
 </p>
