The topic sentence should be placed at the beginning.

--- a/src/_posts/2011-01-09-venture-finance.html
+++ b/src/_posts/2011-01-09-venture-finance.html
@@ -14,10 +14,10 @@ layout: post
   &ndash; startup.
   37signals's &quot;Rework&quot; has a chapter called
   &quot;Outside money is plan B&quot;.
-  Today, Apple, Google and Amazon provide
-  a &quot;store&quot; and a payment service for individial developers.
-  Amazon also provide EC2, S3 and CloudFront.
-  We don't need a large company for a software business.
+  Today, we don't need a large company for a software business.
+  Apple, Google and Amazon provide a &quot;store&quot; and
+  a payment service for individial developers.
+  Amazon also provide their servers and networks on a pay-per-use model.
 </p>
 <p>
   However, &quot;We are small&quot; is not a good reason to ignore finance,
