He is Yosuke, not Kyosuke. So sorry.

--- a/src/_posts/2011-01-10-nosniff.html
+++ b/src/_posts/2011-01-10-nosniff.html
@@ -4,7 +4,7 @@ layout: post
 ---
 <p>
   I learned about X-Content-Type-Options on
-  <a href="http://d.hatena.ne.jp/hasegawayosuke/20110106/p1">Hasegawa Kyosuke's blog</a>.
+  <a href="http://d.hatena.ne.jp/hasegawayosuke/20110106/p1">Hasegawa Yosuke's blog</a>.
   But his article is little misleading.
   Content-sniffing is long-lived feature.
   In the old days, Marc Andreessen wrote about his (Mosaic's)
