--- a/src/_posts/2011-01-09-venture-finance.html
+++ b/src/_posts/2011-01-09-venture-finance.html
@@ -4,13 +4,13 @@ layout: post
 ---
 <p>
   I read Isozaki Tetsuya's
-  &quot;<a href="http://www.amazon.co.jp/gp/product/4534047576?ie=UTF8&tag=8pinfo-22&linkCode=as2&camp=247&creative=7399&creativeASIN=4534047576">Venture Finance - The Essential Guide for Entreprenuers</a><img src="http://www.assoc-amazon.jp/e/ir?t=8pinfo-22&l=as2&o=9&a=4534047576" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />&quot;.
+  &quot;<a href="http://www.amazon.co.jp/gp/product/4534047576?ie=UTF8&amp;tag=8pinfo-22&amp;linkCode=as2&amp;camp=247&amp;creative=7399&amp;creativeASIN=4534047576">Venture Finance - The Essential Guide for Entreprenuers</a><img src="http://www.assoc-amazon.jp/e/ir?t=8pinfo-22&amp;l=as2&amp;o=9&amp;a=4534047576" width="1" height="1" alt="" style="border:none !important; margin:0px !important;" />&quot;.
   The author's writing style is too casual for me.
   But the content is interesting and practical.
 </p>
 <p>
   Personally, I like a small &ndash;
-  <a href="http://www.google.com/search?sitesearch=37signals.com%2Fsvn&q=%22Bootstrapped%2C+Profitable%2C+%26+Proud%22&aq=f&aqi=&aql=&oq=&gs_rfai=">Bootstrapped, Profitable, &amp; Proud</a>
+  <a href="http://www.google.com/search?sitesearch=37signals.com%2Fsvn&amp;q=%22Bootstrapped%2C+Profitable%2C+%26+Proud%22&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=&amp;gs_rfai=">Bootstrapped, Profitable, &amp; Proud</a>
   &ndash; startup.
   37signals's &quot;Rework&quot; has a chapter called
   &quot;Outside money is plan B&quot;.
