--- a/src/_posts/2011-01-10-nosniff.html
+++ b/src/_posts/2011-01-10-nosniff.html
@@ -38,9 +38,9 @@ layout: post
   And <a href="https://developer.mozilla.org/en/How_Mozilla_determines_MIME_Types">Firefox follow the sever-sent type on standard-compliant mode</a>.
 </p>
 <p>
-  However Safari sniffed on application/octet-stream response
+  However Safari sniff on application/octet-stream response
   and interpret as HTML.
-  Safai also sniffed on text/plain response before
+  Safai also sniff on text/plain response before
   <a href="http://support.apple.com/kb/HT2343?viewlocale=en_US">Mac OS X 10.4.4</a>.
   Take care!
 </p>
