We'll evaluate the original string, not "{ ]]] }".

--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -65,7 +65,7 @@ if (/^[\],:{}\s]*$/
 true
 </pre>
 <p>
-  Great!
+  Great! We can pass the original string to <code>eval()</code> safely.
 </p>
 <p>
   json2.js is implemented by Douglas Crockford.
