Concatenate two sentences because it's too short.

--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -68,8 +68,7 @@ true
   Great! We can pass the original string to <code>eval()</code> safely.
 </p>
 <p>
-  json2.js is implemented by Douglas Crockford.
-  Of course, he is the designer of JSON.
+  json2.js is implemented by Douglas Crockford, the designer of JSON.
   However, If I design JSON, I can't implement my sanitizer like Douglas's.
   I'm not <a href="http://crockfordfacts.com/">Chuck Norris</a>.
 </p>
