It's not sanitizer.

--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -19,7 +19,7 @@ layout: post
 </p>
 <p>
   For me, today's most striking code is json2.js.
-  It has eval-based JSON parser with own <em>sanitizer</em>.
+  It has eval-based JSON parser with own safety checker.
   (Note: real code is well-commented. You can see it at
   <a href="https://github.com/douglascrockford/JSON-js/raw/master/json2.js">GitHub</a>)
 </p>
@@ -69,6 +69,6 @@ true
 </p>
 <p>
   json2.js is implemented by Douglas Crockford, the designer of JSON.
-  However, If I design JSON, I can't implement my sanitizer like Douglas's.
+  However, If I design JSON, I can't implement my checker like Douglas's.
   I'm not <a href="http://crockfordfacts.com/">Chuck Norris</a>.
 </p>
