Don't remember a period.

--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -21,7 +21,7 @@ layout: post
   For me, today's most striking code is json2.js.
   It has eval-based JSON parser with own safety checker.
   (Note: real code is well-commented. You can see it at
-  <a href="https://github.com/douglascrockford/JSON-js/raw/master/json2.js">GitHub</a>)
+  <a href="https://github.com/douglascrockford/JSON-js/raw/master/json2.js">GitHub</a>.)
 </p>
 <pre>
 if (/^[\],:{}\s]*$/
