Don't capitalize after comma.

--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -69,6 +69,6 @@ true
 </p>
 <p>
   json2.js is implemented by Douglas Crockford, the designer of JSON.
-  However, If I design JSON, I can't implement my checker like Douglas's.
+  However, if I design JSON, I can't implement my checker like Douglas's.
   I'm not <a href="http://crockfordfacts.com/">Chuck Norris</a>.
 </p>
