--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -19,7 +19,8 @@ layout: post
 </p>
 <p>
   For me, today's most striking code is json2.js.
-  It has eval-based JSON parser with own safety checker.
+  It has eval-based JSON parser and prevent unsafe code execution
+  by an regular expression.
   (Note: real code is well-commented. You can see it at
   <a href="https://github.com/douglascrockford/JSON-js/raw/master/json2.js">GitHub</a>.)
 </p>
@@ -69,6 +70,7 @@ true
 </p>
 <p>
   json2.js is implemented by Douglas Crockford, the designer of JSON.
-  However, if I design JSON, I can't implement my checker like Douglas's.
+  However, if I design JSON,
+  I can't implement my safety checker like Douglas's.
   I'm not <a href="http://crockfordfacts.com/">Chuck Norris</a>.
 </p>
