Because this chapter's title is "Code Evaluation".

--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -19,7 +19,7 @@ layout: post
 </p>
 <p>
   For me, today's most striking code is json2.js.
-  It has eval-based JSON parser and prevent unsafe code execution
+  It has eval-based JSON parser and prevent unsafe code evaluation
   by an regular expression.
   (Note: real code is well-commented. You can see it at
   <a href="https://github.com/douglascrockford/JSON-js/raw/master/json2.js">GitHub</a>.)
