--- a/src/_posts/2011-02-02-perl.html
+++ b/src/_posts/2011-02-02-perl.html
@@ -10,7 +10,7 @@ layout: post
 </p>
 <p>
   If you read an article like
-  &quot;Look! These big web applications uses Perl! Perl is good!&quot;
+  &quot;Look! These big web applications use Perl! Perl is good!&quot;
   on the Web, you should notice two things.
 </p>
 <dl>
@@ -34,7 +34,7 @@ layout: post
   </dd>
 </dl>
 <p>
-  If you find an programming language for your new web application,
+  If you find a programming language for your new web application,
   I recommend that you read
   <a href="http://www.quora.com/Why-did-Quora-choose-Python-for-its-development">Why did Quora choose Python for its development?</a>
   and
