--- a/src/_posts/2011-02-02-perl.html
+++ b/src/_posts/2011-02-02-perl.html
@@ -34,7 +34,7 @@ layout: post
   </dd>
 </dl>
 <p>
-  If you find a programming language for your new web application,
+  If you looking for a programming language for your new web application,
   I recommend that you read
   <a href="http://www.quora.com/Why-did-Quora-choose-Python-for-its-development">Why did Quora choose Python for its development?</a>
   and
