Add an "Archives" page.

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 <div id="container">
+  <nav>
+    <a href="/archives.html">Archives</a>
+  </nav>
   <header>
     <h1>Kato Kazuyoshi</h1>
     <div id="cse" style="width: 100%;">Loading</div>
