--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div id="container">
   <nav>
-    <a href="/archives.html">Archives</a>
+    <a href="{{ site.url }}archives.html">Archives</a>
   </nav>
   <header>
     <h1>Kato Kazuyoshi</h1>
