Beijing is city of China. Everyone knows.

--- a/src/_posts/2011-02-18-baidu-maps.html
+++ b/src/_posts/2011-02-18-baidu-maps.html
@@ -7,7 +7,7 @@ layout: post
   the awesomeness of Baidu Maps.
   They provide
   <a href="http://j.map.baidu.com/l7yK">pixel-art style maps</a>
-  of big cities of China (Beijing, Shanghai, ...).
+  of big cities (Beijing, Shanghai, ...).
 </p>
 <p>
   <img src="http://blog.8-p.info/2011/baidu-maps.png" alt="Beijing"
