His name is Ishi-I.

--- a/src/_posts/2011-02-18-baidu-maps.html
+++ b/src/_posts/2011-02-18-baidu-maps.html
@@ -3,7 +3,7 @@ title: Baidu Maps
 layout: post
 ---
 <p>
-  Today, my coworker (Ishi-san) found
+  Today, my coworker (Ishii-san) found
   the awesomeness of Baidu Maps.
   They provide
   <a href="http://j.map.baidu.com/l7yK">pixel-art style maps</a>
