--- a/src/_posts/2011-02-02-perl.html
+++ b/src/_posts/2011-02-02-perl.html
@@ -6,7 +6,7 @@ layout: post
   Personally, I don't like Perl.
   But I still use Perl on full time job. It's just a historical reason.
   My predecessors wrote tightly coupled large code base in Perl.
-  (and they are leaved. sigh.)
+  (and they are left. sigh.)
 </p>
 <p>
   If you read an article like
