--- a/src/_posts/2011-02-26-iteigo.html
+++ b/src/_posts/2011-02-26-iteigo.html
@@ -15,7 +15,7 @@ layout: post
 </p>
 <p>
   I talked about my experience about Scaladoc.
-  <a href="http://blog.8-p.info/2011/iteigo4.pdf">My slides</a> is here.
+  <a href="http://blog.8-p.info/2011/iteigo4.pdf">My slides</a> are here.
   So I wrote &quot;Code is the lingua franca of programmers&quot;
   on the last slide.
   This is why I have a commit bit of Scaladoc.
