Add "the". Too difficult.

--- a/src/_posts/2011-03-05-eclipse.html
+++ b/src/_posts/2011-03-05-eclipse.html
@@ -8,9 +8,10 @@ layout: post
 </p>
 <p>
   Martin Odersky uses Eclipse.
-  <a href="http://alarmingdevelopment.org/?p=562#comment-58901">He
-    commented about new Scala plugin</a>
-  on Jonathan Edwards' blog.
+  On Jonathan Edwards' blog,
+  <a href="http://alarmingdevelopment.org/?p=562#comment-58901">Odersky
+    commented</a>
+  about the new version of the Scala plugin</a>.
 </p>
 <blockquote>
   <p>
