"Today is" is not good.

--- a/src/_posts/2011-01-29-json2.html
+++ b/src/_posts/2011-01-29-json2.html
@@ -3,8 +3,9 @@ title: json2.js
 layout: post
 ---
 <p>
-  Today is <a href="http://atnd.org/events/10996">Wakate IT Benkyou-kai</a>
-  (in English, &quot;Young IT Study Meeting&quot;?).
+  Today
+  I attended <a href="http://atnd.org/events/10996">Wakate IT Benkyou-kai</a>
+  (in English, &quot;Young IT Study Meetup&quot;?).
   We read <a href="http://jsninja.com/">Secrets of the JavaScript Ninja</a>
   and today's chapter is &quot;Code Evaluation&quot;.
   This book contains many real-world examples. We saw
