--- a/src/_posts/2011-03-09-test-mock-recorder.html
+++ b/src/_posts/2011-03-09-test-mock-recorder.html
@@ -5,7 +5,7 @@ layout: post
 <p>
   In <a href="http://xunitpatterns.com/">xUnit Test Patterns</a>,
   Gerard Meszaros introduce the term &quot;Test Double&quot;
-  and he lists varibous kinds of double: dummy object, fake object,
+  and he lists various kinds of double: dummy object, fake object,
   stub, spy, and mock.
   You can read the summary at
   <a href="http://martinfowler.com/bliki/TestDouble.html">Martin Folwer's
