--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,12 @@ layout: default
   <div id="paginator">
     <div id="newer">
       {% if paginator.previous_page %}
-      <a href="{% if paginator.previous_page > 1 %}page{{paginator.previous_page}}{% endif %}/">&laquo; Newer</a>
+      <a href="{% if paginator.previous_page > 1 %}page{{paginator.previous_page}}{% endif %}/">Newer</a>
       {% endif %}
     </div>
     <div id="older">
       {% if paginator.next_page %}
-      <a href="page{{paginator.next_page}}/">Older &raquo;</a>
+      <a href="page{{paginator.next_page}}/">Older</a>
       {% endif %}
     </div>
   </div>
