--- a/src/_posts/2011-03-21-d3100.html
+++ b/src/_posts/2011-03-21-d3100.html
@@ -3,8 +3,8 @@ title: Nikon D3100
 layout: post
 ---
 <p>
-  Last year, I bought Nikon D3100. Photography is difficult, but interesting.
-  I took some pictures with shallow depth-of-field.
+  Last year I bought Nikon D3100. This is my first DSLR.
+  Therefore I took some pictures with shallow depth-of-field.
 </p>
 <p>
   <a href="http://www.flickr.com/photos/kzys/5545469272/" title="Marui by kzys, on Flickr"><img src="http://farm6.static.flickr.com/5024/5545469272_f75776de67_z.jpg" width="427" height="640" alt="Marui" /></a>
