Typical shallow DOF photo is boring.

--- a/src/_posts/2011-03-21-d3100.html
+++ b/src/_posts/2011-03-21-d3100.html
@@ -4,13 +4,14 @@ layout: post
 ---
 <p>
   Last year I bought my first DSLR, a Nikon D3100.
-  I took some pictures with shallow depth-of-field.
-  It is a rite of passage for a DSLR newbie like me.
+  So I took some pictures with shallow depth-of-field.
+  It's a rite of passage for a DSLR newbie like me.
 </p>
 <p>
   <a href="http://www.flickr.com/photos/kzys/5545469272/" title="Marui by kzys, on Flickr"><img src="http://farm6.static.flickr.com/5024/5545469272_f75776de67_z.jpg" width="427" height="640" alt="Marui" /></a>
 </p>
 <p>
-  I want to learn about a camera and photography.
+  But it's a boring picture.
+  I want to learn more about a camera and photography.
   It's difficult to master but interesting and fun.
 </p>
