--- a/src/_posts/2011-04-03-q1.html
+++ b/src/_posts/2011-04-03-q1.html
@@ -19,10 +19,10 @@ layout: post
 <p>
   On January, I got commit rights on
   <code>trunk/src/compiler/scala/tools/nsc/doc/</code>.
-  But while improving Scaladoc,
-  I need to commit <code>src/compiler/scala/tools/nsc/</code>
-  and <code>test/scaladoc/</code> too.
-  So I emailed and got commit rights on whole <code>trunk/</code>.
+  But I need commit rights on
+  <code>src/compiler/scala/tools/nsc/</code> and
+  <code>test/scaladoc/</code> to close some bugs.
+  So I emailed and got rights on whole <code>trunk/</code>.
 </p>
 <p>
   I rewrote a search feature, closed some bugs and added a test suite.
