Wrote about my attended events.

--- a/src/_posts/2011-04-03-q1.html
+++ b/src/_posts/2011-04-03-q1.html
@@ -32,6 +32,13 @@ layout: post
   Gaiants standing on the shoulders of dwarfs!
 </p>
 
+<h3>Events</h3>
+<p>
+  I attended <a href="http://www.wakateit.org/">Wakate IT Benkyou-kai</a>,
+  mixi Enginners' Seminar, ITEigo and
+  <a href="http://shibuyajs.org/">Shibuya.js</a>.
+</p>
+
 <h3>The 2011 off the Pacific coast of Tohoku Earthquake</h3>
 <p>
   And last but not least, the earthquake.
