--- a/src/_posts/2011-04-03-q1.html
+++ b/src/_posts/2011-04-03-q1.html
@@ -19,7 +19,7 @@ layout: post
 <p>
   On January, I got commit rights on
   <code>trunk/src/compiler/scala/tools/nsc/doc/</code>.
-  But I need commit rights on
+  But I also need to modify under
   <code>src/compiler/scala/tools/nsc/</code> and
   <code>test/scaladoc/</code> to close some bugs.
   So I emailed and got rights on whole <code>trunk/</code>.
