Reverse sentence order to clearify.

--- a/src/_posts/2011-04-03-q1.html
+++ b/src/_posts/2011-04-03-q1.html
@@ -42,8 +42,8 @@ layout: post
 <h3>The 2011 off the Pacific coast of Tohoku Earthquake</h3>
 <p>
   And last but not least, the earthquake.
-  You probably know Fukushima as the place where there is Fukushima I NPP.
-  However Fukushima is my home.
+  Fukushima is my home. But most of you know Fukushima
+  as the place where there is Fukushima I NPP :(
 </p>
 <p>
   <a href="http://www.flickr.com/photos/kzys/5545505324/" title="DSC_0165 by kzys, on Flickr"><img src="http://farm6.static.flickr.com/5011/5545505324_d4f6f940db.jpg" width="333" height="500" alt="DSC_0165"></a>
