--- a/src/_posts/2011-04-03-q1.html
+++ b/src/_posts/2011-04-03-q1.html
@@ -18,7 +18,7 @@ layout: post
 <h3>Scala</h3>
 <p>
   On January, I got commit rights on
-  <code>trunk/src/compiler/scala/tools/nsc/doc/</code>.
+  <code>src/compiler/scala/tools/nsc/doc/</code>.
   But I also need to modify under
   <code>src/compiler/scala/tools/nsc/</code> and
   <code>test/scaladoc/</code> to close some bugs.
@@ -42,9 +42,9 @@ layout: post
 <h3>The 2011 off the Pacific coast of Tohoku Earthquake</h3>
 <p>
   And last but not least, the earthquake.
-  Fukushima is my home. But most of you know Fukushima
-  as the place where there is Fukushima I NPP :(
-</p>
+  Tokyo is back to normal. But the new told about NPP everyday.
+  Most of you know Fukushima as the place where there is Fukushima I NPP.
+  However Fukushima is my home.
 <p>
   <a href="http://www.flickr.com/photos/kzys/5545505324/" title="DSC_0165 by kzys, on Flickr"><img src="http://farm6.static.flickr.com/5011/5545505324_d4f6f940db.jpg" width="333" height="500" alt="DSC_0165"></a>
 </p>
