--- a/src/_posts/2011-04-03-q1.html
+++ b/src/_posts/2011-04-03-q1.html
@@ -42,7 +42,7 @@ layout: post
 <h3>The 2011 off the Pacific coast of Tohoku Earthquake</h3>
 <p>
   And last but not least, the earthquake.
-  Tokyo is back to normal. But the new told about NPP everyday.
+  Tokyo is back to normal. But the news told about NPP everyday.
   Most of you know Fukushima as the place where there is Fukushima I NPP.
   However Fukushima is my home.
 <p>
