--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ layout: default
     <div id="cse">Loading</div>
   </header>
   {% for post in paginator.posts %}
-  <article class="{{ post.date | date: '%a' | downcase }}">
+  <article class="{{ post.date | date: '%a' | downcase }} {{ post.layout }}">
     <section>
       <div class="header">
         <div class="date">
