--- a/src/_posts/2011-04-23-windows.html
+++ b/src/_posts/2011-04-23-windows.html
@@ -1,10 +1,10 @@
 ---
-title: Windows is very important, just like PHP
+title: Windows is very important
 layout: quote
 ---
 <blockquote>
   <iframe title="YouTube video player" width="640" height="390" src="http://www.youtube.com/embed/jo_B4LTHi3I" frameborder="0" allowfullscreen></iframe>
-  <p>Oh no. Windows is very important, just like PHP.</p>
+  <p>Oh no. Windows... Windows is very important. Just like PHP.</p>
   <p class="by">
     - Ryan Dahl in
     <a href="http://youtu.be/jo_B4LTHi3I">Introduction to Node.js</a>
