not straightforward -> what?

--- a/src/_posts/2011-05-04-play.html
+++ b/src/_posts/2011-05-04-play.html
@@ -153,5 +153,5 @@ public static void invoke(Http.Request request, Http.Response response) {
 }
 </pre>
 <p>
-  It's not straightforward for me. But I don't know why yet.
+  Honestly, I don't know why Play uses an exception.
 </p>
