This is why I wrote why.

--- a/src/_posts/2011-05-04-play.html
+++ b/src/_posts/2011-05-04-play.html
@@ -154,4 +154,5 @@ public static void invoke(Http.Request request, Http.Response response) {
 </pre>
 <p>
   Honestly, I don't know why Play uses an exception.
+  It's not straightforward for me.
 </p>
