"May 7" is day, not a week.

--- a/src/_posts/2011-05-10-rewardjs.html
+++ b/src/_posts/2011-05-10-rewardjs.html
@@ -3,7 +3,7 @@ title: RewardJS
 layout: post
 ---
 <p>
-  I've got a daily prize (May 4) and a weekly prize (May 7)
+  I've got a daily prize (May 4) and a weekly prize (May 2-7)
   from <a href="http://rewardjs.com/">RewardJS</a>!
 </p>
 <p>
