Do you know Uffie?

--- a/src/_posts/2011-05-15-play.html
+++ b/src/_posts/2011-05-15-play.html
@@ -58,6 +58,7 @@ protected static void renderTemplate(String templateName, Object... args) {
   LocalvariablesNamesEnhancer manupilate bytecode
   to store information of variables.
 </p>
+<h3>Art of Ply</h3>
 <pre>
 // Si c'est un store de la variable en cours d'examination
 // et que c'est dans la frame d'utilisation de cette variable on trace l'affectation.
