--- a/src/_posts/2011-05-15-play.html
+++ b/src/_posts/2011-05-15-play.html
@@ -9,7 +9,7 @@ layout: post
   <a href="http://twitter.com/#!/jboner/status/69394808044654593">Zenexity</a>. And of course,
   <a href="http://www.zenexity.fr/#think">they</a>
   use
-  <a href="http://twitter.com/#!/jboner/status/69394808044654593">Play and Scala</a>.
+  <a href="http://twitter.com/#!/jboner/status/69369275445559297">Scala and Play</a>.
 </p>
 <h3>Cool thing</h3>
 <p>
