--- a/src/_posts/2011-05-19-jquery.html
+++ b/src/_posts/2011-05-19-jquery.html
@@ -17,8 +17,8 @@ layout: post
   the first argument of
   <a href="http://api.jquery.com/jQuery.each/">each</a> should not be index.
   And jQuery provides a few methods for non-DOM operation.
-  I want to use
-  <a href="http://www.prototypejs.org/api/enumerable">Enumerable</a>.
+  I want to use more methods like
+  <a href="http://www.prototypejs.org/api/enumerable">Prototype's Enumerable</a>.
 </p>
 <p>
   But today, many programmers use jQuery.
