Add a screen shot.

--- a/src/_posts/2011-05-22-ruby.html
+++ b/src/_posts/2011-05-22-ruby.html
@@ -7,6 +7,9 @@ layout: post
   My favorite language is now Scala. But Ruby is still interesting.
 </p>
 <p>
+  <img src="http://blog.8-p.info/2011/rubykaigi.png" alt="RubyKaigi"/>
+</p>
+<p>
   Programming languages trade their idea continuously.
   And Ruby has a large trade surplus:
   <a href="http://www.sinatrarb.com/">Sinatra</a>,
