Probably "That's why" is more natural.

--- a/src/_posts/2011-05-22-ruby.html
+++ b/src/_posts/2011-05-22-ruby.html
@@ -18,7 +18,8 @@ layout: post
   <a href="http://sass-lang.com/">Sass</a> and of course,
   <a href="http://rubyonrails.org/">the &quot;curated&quot; framework</a>.
   I think Ruby is the lab of good programmers.
+  That's why I attend RubyKaigi.
 </p>
 <p>
-  This is why I attend RubyKaigi. I can't wait July!
+  I can't wait July!
 </p>
