Don't forget a code review tool.

--- a/src/_posts/2011-05-29-weekend.html
+++ b/src/_posts/2011-05-29-weekend.html
@@ -25,7 +25,9 @@ layout: post
   <a href="http://www.pomodorotechnique.com/">The Pomodoro Technique</a>,
   Chrome,
   <a href="http://swtch.com/~rsc/regexp/">Russ Cox</a>,
-  RPC and a bunch of geeky stuff.
+  RPC,
+  <a href="http://code.google.com/p/rietveld/">Rietveld</a>
+  and a bunch of geeky stuff.
 </p>
 
 <h3>Android and Arduino</h3>
