--- a/src/_posts/2011-05-29-weekend.html
+++ b/src/_posts/2011-05-29-weekend.html
@@ -16,8 +16,8 @@ layout: post
   My friend and I ordered five
   <a href="http://shop.github.com/products/octocat-mug">Octocat Mugs</a>
   at May 11.
-  These mugs are arrived and I got my one at
-  <a href="http://hemel.o0o0.jp/">Hemel</a>.
+  These mugs are arrived and I got my one on
+  <a href="http://hemel.o0o0.jp/">Hemel</a> at Saturday night.
   I talked my friend and his friends (they bought a mug from him).
   We are all programmers.
   So we talked about <a href="http://knowyourmeme.com/">Know Your Meme</a>,
@@ -33,7 +33,7 @@ layout: post
 <h3>Android and Arduino</h3>
 <p>
   And now, I have 3 iOS devices because I still use iPhone 3G.
-  I think it's good time to try Android.
+  I think it's good time to buy Android instead of iPhone.
   First I've ordered <a href="http://www.sparkfun.com/products/9947">USB Host Shield</a> at <a href="http://www.switch-science.com/products/detail.php?product_id=438">Switch Science</a>.
   I want to use <a href="http://developer.android.com/guide/topics/usb/adk.html">Android Open Accessory Development Kit</a>
   but &quot;Android Open Accessory compatible development boards&quot; are too expensive.
