--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,13 @@ layout: default
   <div id="paginator">
     <div id="newer">
       {% if paginator.previous_page %}
-      <a href="{% if paginator.previous_page > 1 %}page{{paginator.previous_page}}{% endif %}/">Newer</a>
+      <a href="/" title="Newest">|&lt;</a>
+      <a href="{% if paginator.previous_page > 1 %}page{{paginator.previous_page}}{% endif %}/" title="Newer">&lt;&lt;</a>
       {% endif %}
     </div>
     <div id="older">
       {% if paginator.next_page %}
-      <a href="page{{paginator.next_page}}/">Older</a>
+      <a href="page{{paginator.next_page}}/" title="Older">&gt;&gt;</a>
       {% endif %}
     </div>
   </div>
