--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ layout: default
           </time>
         </div>
         <h2>{{ post.title }}</h2>
-        <a class="permalink" href="/2011{{ post.url }}">&raquo;</a>
+        <a class="permalink" href="/2011{{ post.url }}">&#x2704;</a>
       </div>
       <div class="content">{{ post.content }}</div>
     </section>
@@ -27,13 +27,13 @@ layout: default
   <div id="paginator">
     <div id="newer">
       {% if paginator.previous_page %}
-      <a href="/" title="Newest">|&lt;</a>
-      <a href="{% if paginator.previous_page > 1 %}page{{paginator.previous_page}}{% endif %}/" title="Newer">&lt;&lt;</a>
+      <a href="/" title="Newest">&#x2780;</a>
+      <a href="{% if paginator.previous_page > 1 %}page{{paginator.previous_page}}{% endif %}/" title="Newer">&laquo;</a>
       {% endif %}
     </div>
     <div id="older">
       {% if paginator.next_page %}
-      <a href="page{{paginator.next_page}}/" title="Older">&gt;&gt;</a>
+      <a href="page{{paginator.next_page}}/" title="Older">&raquo;</a>
       {% endif %}
     </div>
   </div>
