I know about myself. So I remove "think" from this paragraph.

--- a/src/_posts/2011-06-12-unicode.html
+++ b/src/_posts/2011-06-12-unicode.html
@@ -35,5 +35,5 @@ layout: post
 <p>
   However I should see that
   I did't tackle the specification (or the standarization) yet.
-  Some of caused by my English skill, but I think some is not.
+  Some of caused by my English skill, but some is not.
 </p>
