Add the cover image.

--- a/src/_posts/2011-06-12-unicode.html
+++ b/src/_posts/2011-06-12-unicode.html
@@ -3,6 +3,9 @@ title: Unicode Senki
 layout: post
 ---
 <p>
+  <a href="http://www.amazon.co.jp/dp/450154970X"><img src="http://images.amazon.com/images/P/450154970X.01._SCLZZZZZZZ_.jpg" alt="Cover"/></a>
+</p>
+<p>
   &quot;Unicode <em>Senki</em>&quot;
   (<em>Senki</em> is &quot;war chronicle&quot; in Japanese)
   is an interesting documentary about Unicode and standarization.
