Too many (or ...).

--- a/src/_posts/2011-06-12-unicode.html
+++ b/src/_posts/2011-06-12-unicode.html
@@ -24,8 +24,7 @@ layout: post
   <a href="http://www.ietf.org/mail-archive/web/oauth/current/maillist.html">the mailing list of OAuth</a>
   carefully because we need to release new product with
   OAuth 2.0 based authorization.
-  But I didn't (or couldn't) join the discussion.
-  My ex-boss did it on OpenSocial.
+  But I didn't join the discussion. My ex-boss did it on OpenSocial.
 </p>
 <p>
   Sometimes my coworker said
