--- a/src/_posts/2011-06-12-unicode.html
+++ b/src/_posts/2011-06-12-unicode.html
@@ -14,7 +14,7 @@ layout: post
 </p>
 <p>
   &quot;Defined by the specification&quot; is acutually
-  &quot;Defined by someone&quot;.
+  &quot;Defined by someone wrote the specification&quot;.
   This book shows how standarization folks struggle the difficulity
   and how Japanese tackle an international project.
   Really impressed.
