--- a/src/_posts/2011-06-18-scaladoc.html
+++ b/src/_posts/2011-06-18-scaladoc.html
@@ -14,10 +14,11 @@ layout: post
   So I was in a hurry to talk and extended my session a little.
 </p>
 <p>
-  So sorry. I should practice more,
+  I should practice more,
   or I'll make an automatic slide show software
   (like <a href="http://www.pecha-kucha.org/">Pecha Kucha</a>)
   to keep my speed.
+  So sorry.
 </p>
 
 
