--- a/src/_posts/2011-06-26-review.html
+++ b/src/_posts/2011-06-26-review.html
@@ -3,7 +3,7 @@ title: April, May and June
 layout: post
 ---
 <p>
-  It's middle of the year now.
+  It's middle of the year now. So I'll review my three months.
 </p>
 
 <h3>Eikaiwa school</h3>
@@ -49,7 +49,7 @@ layout: post
 <p>
   Have you ever see an angry man on a station
   when a train accident occurred?
-  &quot;I'LL LATE! MOVE THE TRAIN!&quot;
+  He shouts at the staff, &quot;I'LL LATE! MOVE THE TRAIN!&quot;.
   Does he makes things better?
 </p>
 <p>
@@ -57,5 +57,3 @@ layout: post
   It's biggest demo I've never seen.
   I'm confused and I rememberd the angry man.
 </p>
-
-
