Add a photo of prizes.

--- a/src/_posts/2011-06-26-review.html
+++ b/src/_posts/2011-06-26-review.html
@@ -42,6 +42,9 @@ layout: post
   Can you beleive?
 </p>
 <p>
+  <a href="http://www.flickr.com/photos/kzys/5936754467/" title="RewardJS by kzys, on Flickr"><img src="http://farm7.static.flickr.com/6147/5936754467_a710dbe1c0_z.jpg" width="640" height="427" alt="RewardJS"></a>
+</p>
+<p>
   But I ashamed a little. Because I didn't fix bug after RewardJS.
 </p>
 
