Add my series about RubyKaigi.

--- a/src/_posts/2011-07-26-rubykaigi.html
+++ b/src/_posts/2011-07-26-rubykaigi.html
@@ -1,9 +1,12 @@
 ---
-title: RubyKaigi (1/3)
+title: The first day of RubyKaigi
 layout: post
 ---
 <p>
   Ok, I'll write about RubyKaigi.
+</p>
+<p>
+  <a href="http://rubykaigi.org/2011/"><img src="/2011/160x90attendee.png" alt="RubyKaigi 2011 Attendee"/></a>
 </p>
 <h3>Aaron Peterson - Ruby Ruined My Life</h3>
 <p>
