"I've read (X) and remembered (Y)" is not clear.

--- a/src/_posts/2011-08-21-bandwidth.html
+++ b/src/_posts/2011-08-21-bandwidth.html
@@ -5,7 +5,8 @@ layout: post
 <p>
   Motohiro (my friend) wrote about his 30 day challenge:
   <a href="http://mootoh.tumblr.com/post/9181954804/30days-1">Stop Reading Feeds</a> (in Japanese).
-  I've read and remembered &quot;Expand Your Bandwidth&quot; - a pattern from
+  After reading his post,
+  I remembered &quot;Expand Your Bandwidth&quot; - a pattern from
   &quot;Apprenticeship Patterns&quot;.
   &quot;Expand Your Bandwidth&quot;
   means read blogs, join a local user group and so on.
