In this paragraph, I want to show my motivation about learning English.

--- a/src/_posts/2011-09-29-review.html
+++ b/src/_posts/2011-09-29-review.html
@@ -27,12 +27,12 @@ layout: post
   is not the best way to learn English but works for me.
 </p>
 <p>
-  I'm worrying about my job.
-  Several years ago, many Japanese companies built softwares for
+  English is important.
+  A few years ago, many Japanese companies built softwares for
   mobile phones from top to bottom.
   However now, many people use iPhone and many companies move to Android.
-  i-mode was great, but it became a foot note of our industry.
-  What's next?
+  i-mode was great, but it became a foot note of our industry's history.
+  What's next? Can I compete against a global team?
 </p>
 <h3>Introduction to Databases</h3>
 <p>
