According the book, "Minimal ZTD" is correct.

--- a/src/_posts/2011-11-01-ztd.html
+++ b/src/_posts/2011-11-01-ztd.html
@@ -21,7 +21,7 @@ layout: post
 </p>
 <p>
   However, ZTD itself is not so bad.
-  I will try the simplest version that named &quot;Minimalist ZTD&quot;
+  I will try the simplest version that named &quot;Minimal ZTD&quot;
   in November and December.
   This version have only four habits: Collect, Process, Plan and Do.
   In this month, I will focus to get into two habits: Collect and Plan.
