http:// -> // to support both HTTP and HTTPS

--- a/src/_posts/2011-02-18-baidu-maps.html
+++ b/src/_posts/2011-02-18-baidu-maps.html
@@ -10,7 +10,7 @@ layout: post
   of big cities (Beijing, Shanghai, ...).
 </p>
 <p>
-  <img src="http://blog.8-p.info/2011/baidu-maps.png" alt="Beijing"
+  <img src="//blog.8-p.info/2011/baidu-maps.png" alt="Beijing"
        width="640" height="480" />
 </p>
 <p>
