--- a/src/_posts/2011-02-26-iteigo.html
+++ b/src/_posts/2011-02-26-iteigo.html
@@ -10,12 +10,12 @@ layout: post
   And we rent EC Navi's in-company bar, AJITO. It's a really great space!
 </p>
 <p>
-  <img src="http://blog.8-p.info/2011/iteigo4-slides.png"
+  <img src="//blog.8-p.info/2011/iteigo4-slides.png"
        width="640" height="460" alt="Slides" />
 </p>
 <p>
   I talked about my experience about Scaladoc.
-  <a href="http://blog.8-p.info/2011/iteigo4.pdf">My slides</a> are here.
+  <a href="//blog.8-p.info/2011/iteigo4.pdf">My slides</a> are here.
   So I wrote &quot;Code is the lingua franca of programmers&quot;
   on the last slide.
   This is why I have a commit bit of Scaladoc.
