--- a/src/_posts/2011-05-19-jquery.html
+++ b/src/_posts/2011-05-19-jquery.html
@@ -8,7 +8,7 @@ layout: post
   In this edition, David Flanagan devotes one chapter to jQuery.
 </p>
 <p>
-  <img src="http://blog.8-p.info/2011/flanagan.png" alt="David Flanagan's book"/>
+  <img src="//blog.8-p.info/2011/flanagan.png" alt="David Flanagan's book"/>
 </p>
 <p>
   Several years ago, I found jQuery. But it's little odd for me.
