--- a/src/_posts/2011-05-22-ruby.html
+++ b/src/_posts/2011-05-22-ruby.html
@@ -7,7 +7,7 @@ layout: post
   My favorite language is now Scala. But Ruby is still interesting.
 </p>
 <p>
-  <img src="http://blog.8-p.info/2011/rubykaigi.png" alt="RubyKaigi"/>
+  <img src="//blog.8-p.info/2011/rubykaigi.png" alt="RubyKaigi"/>
 </p>
 <p>
   Programming languages trade their idea continuously.
