--- a/src/_posts/2011-06-18-scaladoc.html
+++ b/src/_posts/2011-06-18-scaladoc.html
@@ -3,13 +3,13 @@ title: How to become a Scaladoc committer
 layout: post
 ---
 <p>
-  <img src="http://blog.8-p.info/2011/ariel.png" alt="Slides"/>
+  <img src="//blog.8-p.info/2011/ariel.png" alt="Slides"/>
 </p>
 <p>
   On Friday, I talked about Scaladoc at
   <a href="http://partake.in/events/d625cbd2-d26c-4b4d-bd78-5c937232c848">Ariel Area Benkyou-kai</a>
   (in English, study meet up?).
-  These are <a href="http://blog.8-p.info/2011/scala-ariel.pdf">my slides</a>.
+  These are <a href="//blog.8-p.info/2011/scala-ariel.pdf">my slides</a>.
   I had five minutes on stage. But I could't give a talk in five minutes.
   So I was in a hurry to talk and extended my session a little.
 </p>
